--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Créer un article</h1>
+<h1>Editer l'article</h1>
+
 
 <% if @article.errors.any?%>
 <h2>les erreurs suivantes empêchent l'article d'être crée</h2>
