--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,26 +1,3 @@
 <h1>Créer un article</h1>
 
-<% if @article.errors.any?%>
-<h2>les erreurs suivantes empêchent l'article d'être crée</h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg|%>
-  <li><%= msg%></li>
-  <% end %>
-</ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %> <br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %> <br/>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<%= link_to "Retourner à la liste d'articles", articles_path%>
+<%= render 'form' %>
