--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style= "background: #7F94B5; text-align: center; ">
 
   <header><h1> Welcome to my Home Page</h1></header>
-  <nav><%= link_to 'About', about_path %></nav>
-  
+  <nav><%= link_to "Blog", articles_path %> | <%= link_to 'About', about_path %> </nav>
+
 
 </div>
