page d'accueuil et liens , + styling css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
-<div class="container" style= "background: #7F94B5; text-align: center; ">
+<div class="center jumbotron">
 
-  <header><h1> Welcome to my Home Page</h1></header>
-  <nav><%= link_to "Blog", articles_path %> | <%= link_to 'About', about_path %> </nav>
-
+  <h1>Tahiti Web Services</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
 
 </div>
