--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <footer class="footer">
     <small>
-    Copyright &copy; Tahiti Web Services
+    &copy; 2019 | Tahiti Web Services
     </small>
     <nav>
       <ul>
-        <li><%= link_to "A Propos", about_path %></li>
+        <li><%= link_to "À Propos", about_path %></li>
       </ul>
     </nav>
   </footer>
