Ajout styling show view

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,7 @@
     <td><%= article.description %></td>
     <td><%= link_to 'Éditer', edit_article_path(article) %></td>
     <td><%= link_to 'Afficher', article_path(article) %></td>
-    <td><%= link_to 'Supprimer', article_path(article), method: :delete , data: {confirm: 'Confirmation'} %></td>
+    <td><%= link_to 'Supprimer', article_path(article), method: :delete , data: {confirm: 'Êtes-vous sûr?'} %></td>
     </tr>
   <% end %>
 </table>
