--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,21 @@
-<h1>Liste des Articles</h1>
-<p>
-<%= link_to "Créer un nouvel article", new_article_path%>
-</p>
-<table>
-  <tr>
-    <th>Titre</th>
-    <th>Description</th>
-  </tr>
-  <% @articles.each do |article| %>
-    <tr>
-    <td><%= article.title %> </td>
-    <td><%= article.description %></td>
-    <td><%= link_to 'Éditer', edit_article_path(article) %></td>
-    <td><%= link_to 'Afficher', article_path(article) %></td>
-    <td><%= link_to 'Supprimer', article_path(article), method: :delete , data: {confirm: 'Êtes-vous sûr?'} %></td>
-    </tr>
-  <% end %>
-</table>
+<h1 align="center">Liste des Articles</h1>
+<% @articles.each do |article| %>
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <div class="well well-lg">
+        <div class="article-title">
+          <%= link_to article.title, article_path(article)%>
+        </div>
+        <div class="article-body">
+        <%= truncate(article.description, length: 100) %>
+        </div>
+        <div class="article-actions">
+          <%= link_to "Éditer cet article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+          <%= link_to "Supprimer cet article", article_path(article),  method: :delete,
+                                                                        data: {confirm: "Êtes-vous sur de vouloir supprimer cet article?"},
+                                                                        class: "btn btn-xs btn-danger"%>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
