Changes to about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
-<div class="container" style= "background: #7F94B5; text-align: center; ">
-<h1>About me</h1>
+<div class="container">
+<h1 align="center">About me</h1>
 
-<section><%= image_tag 'Ma prise.jpg' %></section>
-<article> <p>Ma première prise en haute mer (special thanks à Régis et son Papa pour l'occasion)</p> </article>
-<footer><%= link_to 'home', root_path %></footer>
+<section class="center"><%= image_tag 'Ma prise.jpg' %></section>
+<article class="center description"> Ma première prise en haute mer (special thanks à Régis et son Papa pour l'occasion) </article>
+<footer align="center"><%= link_to 'home', root_path , class: "btn btn-xs btn-primary"%></footer>
 
 </div>
