--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,13 @@
           <%= link_to article.title, article_path(article)%>
         </div>
         <div class="article-body">
-        <%= truncate(article.description, length: 100) %>
+          <%= truncate(article.description, length: 100) %>
+          <div class="article-meta-details">
+            <small>Crée par: <%= article.user.username if article.user %>,
+                  <%= time_ago_in_words(article.created_at) %> ago,
+                  mis à jour la plus récente: <%= time_ago_in_words(article.updated_at) %> ago
+            </small>
+          </div>
         </div>
         <div class="article-actions">
           <%= link_to "Éditer cet article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
