--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,8 @@
 <h1 align="center">Liste des Articles</h1>
+<div align="center">
+  <%= will_paginate @articles %>
+</div>
 <%= render 'article' , object: @articles%>
+<div align="center">
+  <%= will_paginate @articles %>
+</div>
