--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,11 @@
     <%= gravatar_for @user , size: 150 %>
   </div>
 </div>
-
 <h4 align="center">Articles de <%= @user.username %></h4>
-<%= render 'articles/article', object: @user.articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
+<%= render 'articles/article', object: @user_articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
