--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,12 +14,14 @@
             </small>
           </div>
         </div>
-        <div class="article-actions">
-          <%= link_to "Éditer cet article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-          <%= link_to "Supprimer cet article", article_path(article),  method: :delete,
-                                                                        data: {confirm: "Êtes-vous sur de vouloir supprimer cet article?"},
-                                                                        class: "btn btn-xs btn-danger"%>
-        </div>
+        <% if logged_in? && current_user == article.user %>
+          <div class="article-actions">
+            <%= link_to "Éditer cet article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+            <%= link_to "Supprimer cet article", article_path(article),   method: :delete,
+                                                                          data: {confirm: "Êtes-vous sur de vouloir supprimer cet article?"},
+                                                                          class: "btn btn-xs btn-danger"%>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
