--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
 
   <h1>Tahiti Web Services</h1>
-  <%= link_to "Inscrivez-vous dès maintenant", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+  <%= link_to "Inscrivez-vous dès maintenant", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
 
 </div>
