--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,7 +21,7 @@
   <hr>
   <%= simple_format(@article.description) %>
   <div class="article-actions">
-    <% if logged_in? && current_user == @article.user %>
+    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
       <%= link_to "Éditer cet article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
       <%= link_to "Supprimer cet article", article_path(@article),  method: :delete,
                                                                     data: {confirm: "Êtes-vous sur de vouloir supprimer cet article?"},
