--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,3 @@
-<nav> </nav>
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,7 +43,7 @@
         <li><%= link_to 'Se déconnecter', logout_path, method: :delete %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-          aria-haspopup="true" aria-expanded="false">Votre profil <span class="caret"></span></a>
+          aria-haspopup="true" aria-expanded="false">Votre profil <%="Administrateur" if current_user.admin? %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Editer votre profil', edit_user_path(current_user) %></li>
             <li><%= link_to 'Voir votre profil', user_path(current_user) %></li>
