--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,10 @@
             <%= link_to user.username, user_path(user) %>
           </li>
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+          <% if logged_in? and current_user.admin? %>
+            <li><%= link_to "Supprimer cet utilisateur", user_path(user), method: :delete,
+                    data: { confirm: "Êtes-vous sûr de vouloir supprimer cet utilisateur ainsi que tous ses articles?"} %></li>
+          <% end %>
         </div>
       </div>
     </ul>
