--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -20,8 +20,20 @@
         </div>
       </div>
       <div class="form-group">
+        <div class="row">
+          <div class="col-sm-offset-2 col-sm-8  ">
+            <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+              <%= cb.label(class: "checkbox-inline input_checkbox") do %>
+                <%= cb.check_box(class: "checkbox") + cb.text %>
+                <span class="checkmark"></span>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit class: 'btn btn-primary btn-lg'%>
+          <%= f.submit @article.new_record? ? "Créer" : "Modifier" , class: 'btn btn-primary btn-lg'%>
         </div>
       </div>
 
