--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,24 +1,3 @@
 <h1 align="center">Créer une catégorie</h1>
 
-<%= render 'shared/errors', object: @category %>
-
-<%= form_for @category , html: {class: "form-horizontal", role: "form"} do |f| %>
-  <div class="form-group">
-    <div class="control-label col-sm-2">
-      <%= f.label :name %>
-    </div>
-    <div class="col-sm-8">
-      <%= f.text_field :name, class: "form-control", placeholder: "Nom de la catégorie", autofocus: true %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit "Créer", class: 'btn btn-primary btn-lg'%>
-    </div>
-  </div>
-
-
-<% end %>
-<div class="col-xs-4 col-xs-offset-4">
-  [ <%= link_to "Annuler et retourner à la liste d'articles", articles_path%> ]
-</div>
+<%= render 'form' %>
